@@ -1,5 +1,6 @@
 == 0.4.0
 
+* split User methods to several modules
 * split locale files into separate folder and add to I18n.load_path
 * collect methods of User model into AuthlogicBundle::User module
 
